[BugFix]- fixed lag on mobile dvices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,14 @@
 
 }
 
+/* activate button */
+.button-blue:active,
+.button-green:active,
+.button-yellow:active,
+.button-red:active{
+     transform: scale(0.95);
+}
+
 /* Game button pressed */
 .game-button-pressed {
     transform: scale(0.95);
@@ -253,6 +261,13 @@
     border: 10px solid black;
     border-radius: 50%;
     box-shadow: inset 0 0 30px #5e5e5e;
+}
+
+.center-circle-stop{
+    border: 10px solid #ff0000;
+}
+.center-circle-go{
+    border: 10px solid #00ff00;
 }
 
 /*  The Center Text */
